Add simple style for page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/react-router/2.6.1/ReactRouter.min.js"></script>
 </head>
 <body>
-<div id="content"></div>
+<div id="content" class="row"></div>
 <script type="text/babel" src="js/index.js"></script>
 </body>
 </html>
